# linear-regression

linear-regression/: README.md  pyproject.toml  regression.ipynb
